# cvhw3

./: CMakeLists.txt  cvhw3.cpp  cvhw3_markers.cpp  ffmpeg_windows.txt  gstreamer_plugins.txt  hw3report.docx
